# using-asyncio-in-python

./: README.md  pylama.ini  pyproject.toml
src/chapter 1/: história.txt
src/chapter 2/: ex1.py  study_case.py  threadmem.py
src/chapter 3/: ex10.py  ex11.py  ex12.py  ex13n14.py  ex15.py  ex16.py  ex17.py  ex18.py  ex19.py  ex1_quickstart.py  ex20.py  ex21.py  ex22.py  ex23.py  ex24.py  ex25.py  ex26.py  ex27.py  ex28.py  ex29.py  ex2_quickstart.py  ex30.py  ex31.py  ex32.py  ex33.py  ex34.py  ex35.py  ex36.py  ex37.py  ex38.py  ex39.py  ex3_quickstart_exe.py  ex4n5.py  ex6.py  ex7.py  ex8.py  ex9.py  notes.md  quickstart-2.py
src/chapter 4/aio_http/: ex13.py  ex14.py  index.html
src/chapter 4/asyncpg_sanic/: asyncpg-basic.py  util.py
src/chapter 4/janus_queue/: janus_demo.py
src/chapter 4/sanic_asyncpg/: model.py  perf.py  sanic_demo.py  triggers.py
src/chapter 4/streams/: mq_client_sender.py  mq_server_plus.py  msgproto.py
src/chapter 4/study_case_one/: mq_client_listen.py  mq_client_sender.py  mq_server.py
src/chapter 4/twisted/: ex10.py  twisted_asyncio.py
src/chapter 4/zero_MQ.py/: poller_aio.py
src/chapter 4/zero_MQ.py/app_perform_monitoring/: backend-app.py  charts.html  metric_server.py
src/chapter 4/zero_MQ.py/multiple_sockets/: poller.py  poller_srv.py
