[tool.poetry]
name = "using-asyncio-in-python"
version = "0.1.0"
description = ""
authors = ["ralphribeiro <ralph_ribeiro@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^20.3.0"
aioredis = "^1.3.1"
Twisted = "^20.3.0"
janus = "^0.6.1"
aiohttp = "^3.7.3"
bs4 = "^0.0.1"
lxml = "^4.6.2"
zmq = "^0.0.0"
psutil = "^5.8.0"
aiohttp-sse = "^2.0.0"

[tool.poetry.dev-dependencies]
pylama = "^7.7.1"
autopep8 = "^1.5.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
